[package]
name = "whyq"
description = "yet another jq wrapper"
authors = [
    "clux <sszynrae@gmail.com>",
]
version = "0.8.0"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/whyq"
edition = "2021"
rust-version = "1.70.0"
categories = ["command-line-utilities", "parsing"]


[[bin]]
doc = false
name = "yq"
path = "yq.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["cargo", "derive"] }
serde_json = "1.0.105"
toml = { version = "0.7.6", features = ["display"] }
serde_yaml = "0.9.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
lto = true
panic = "abort"
#strip = "symbols"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/yq-{ target }{ archive-suffix }"
bin-dir = "yq-{ target }/{ bin }{ format }"
