[package]
name = "whyq"
description = "yet another jq wrapper"
authors = [
    "clux <sszynrae@gmail.com>",
]
version = "0.10.2"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/whyq"
edition = "2021"
rust-version = "1.76.0"
categories = ["command-line-utilities", "parsing"]


[[bin]]
doc = false
name = "yq"
path = "yq.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["cargo", "derive"] }
serde_json = "1.0.119"
toml = { version = "0.8.14", features = ["display"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
panic = "abort"
#strip = "symbols"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/yq-{ target }{ archive-suffix }"
bin-dir = "yq-{ target }/{ bin }{ format }"
